fixed the overlapping elements on the sign up page

--- a/static/sign_up.css
+++ b/static/sign_up.css
@@ -22,7 +22,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background: #fff;
-    padding: 50px 60px 70px;
+    padding: 50px 60px 40px;
     text-align: center;
 }
 
@@ -83,6 +83,7 @@ form p a {
     margin: auto;
     text-align: center;
     justify-content: center;
+    padding-top: 60px;
 }
 
 .btn {
